  able to take advantage of 2x more lanes with the vector API. (Adrien Grand)

* GITHUB#13994: Speed up top-k retrieval of filtered conjunctions.
  (Adrien Grand)

* GITHUB#13985: Introduces IndexInput#updateReadAdvice to change the ReadAdvice
  while merging vectors. (Tejas Shah)

* GITHUB#14000: Speed up top-k retrieval of filtered disjunctions.
  (Adrien Grand)

Bug Fixes
---------------------
* GITHUB#13832: Fixed an issue where the DefaultPassageFormatter.format method did not format passages as intended
  when they were not sorted by startOffset. (Seunghan Jung)
* GITHUB#13884: Remove broken .toArray from Long/CharObjectHashMap entirely. (Pan Guixin)
* GITHUB#12686: Added support for highlighting IndexOrDocValuesQuery. (Prudhvi Godithi)
* GITHUB#13927: Fix StoredFieldsConsumer finish. (linfn)
* GITHUB#13944: Ensure deterministic order of clauses for `DisjunctionMaxQuery#toString`. (Laurent Jakubina)
* GITHUB#13841: Improve Tessellatorlogic when two holes share the same vertex with the polygon which was failing
  in valid polygons. (Ignacio Vera)
* GITHUB#13990: Added filter to the toString() method of Knn[Float|Byte]VectorQuery
  and DiversifyingChildren[Float|Byte]KnnVectorQuery. (Viswanath Kuchibhotla)

Build
---------------------

* Upgrade forbiddenapis to version 3.8.  (Uwe Schindler)

Other
---------------------
* GITHUB#13982: Remove duplicate test code. (Lu Xugang)

======================== Lucene 10.0.1 =======================

Bug Fixes
---------------------


======================= Lucene 10.0.0 =======================

API Changes
---------------------
* LUCENE-12092: Remove deprecated UTF8TaxonomyWriterCache. Please use LruTaxonomyWriterCache
  instead. (Vigya Sharma)

* LUCENE-10010: AutomatonQuery, CompiledAutomaton, RunAutomaton, RegExp
  classes no longer determinize NFAs. Instead it is the responsibility
  of the caller to determinize.  (Robert Muir)

* LUCENE-10368: IntTaxonomyFacets has been make pkg-private and serves only as an internal